2006-03-08  Lillian Angel  <langel@redhat.com>

	* java/awt/GridBagLayout.java
	(GetLayoutInfo): If gridy is RELATIVE and there is no component
	in the bottom-most spot of the column, we need to place that component
	at the y-location of the other components in that row. If there are
	no other components in that row, then place it at y = 0.

2006-03-08  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/ProgressMonitor.java: Updated API docs,
	* javax/swing/ProgressMonitorInputStream.java: Likewise.

2006-03-08  Michael Koch  <konqueror@gmx.de>

	* java/net/InetSocketAddress.java
	(InetSocketAddress(String,int,resolve)): New private contructor.
	(InetSocketAddress(String,int)): Use new private constructor.
	(createUnresolved): New method.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java (constructor): Assign last and time fields
 	after pause.

2006-03-07  Tom Tromey  <tromey@redhat.com>

	* java/lang/System.java (clearProperty): New method, merged from
	generics branch.
	(getProperty): Removed 'else'.
	(getProperty): Check for empty key.
	(setProperty): Likewise.
	* gnu/classpath/SystemProperties.java (remove): New method, merged
	from generics branch.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java: New file (replacing). 

2006-03-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/util/jar/Manifest.java: Removed unused imports.
	(CRLF): New constant.
	(read): Added method documentation.
	Use UTF-8 encoding instead of 8859_1.
	(write): Added method documentation.
	Use BufferedOutputStream (w/ 4K buffer) instead of PrintWriter.
	(write_main_section): Replace PrintWriter arg with OutputStream.
	Replace JarException with IOException.
	(write_version_info): Likewise.
	(write_main_attributes): Likewise.
	(write_attribute_entry): Likewise.
	(write_individual_sections): Likewise.
	(write_entry_attributes): Likewise.